--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url('https://www.pixelstalk.net/wp-content/uploads/2016/07/HD-Sunrise-Image.jpg');
+  background-image: url('../images/background.JPG');
+  background-size: cover;
 }
 
 h1{
