--- a/views/index.pug
+++ b/views/index.pug
@@ -12,9 +12,9 @@ block content
   p.question Is this another computer science class #{title} ?
   p.answer Nope, we believe programmers are awesome and world needs more of them! 
 
+  p.question Who am I?
+  a(href='./aboutme') link to about me
 
-  div.button 
-      input(type="button", value="test")
-  div.text
-    input(type="text", value="test")
+  a(href='http://www.microsoft.com') link to Microsoft
+
 
