made footer and seperated out route for about me

--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -5,7 +5,7 @@ block content
   h1= title
   
 
-  p.question Who am I?
+  p.question Who am I (Vihan Dalvi)?
   p.answer Just a fellow programmer and a student of RHS! 
 
 
