--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,4 +5,15 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
-    block content
+    Table
+      Tr(height = "500px")
+        block content 
+      Tr(height="50px")
+        td(width ="200px")
+          a(href='./aboutme') About me 
+        td(width ="200px")
+          a(href='http://www.microsoft.com') Microsoft
+        td(width ="200px")
+          a(href='./users') Users
+        td(width ="200px")
+          a(href='./') Home
