--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,10 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
-    Table
-      Tr(height = "500px")
-        block content 
-      Tr(height="50px")
+    block content 
+    div.footer 
+      Table
+        Tr
         td(width ="200px")
           a(href='./aboutme') About me 
         td(width ="200px")
