--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,8 +36,17 @@ div.footer{
   background-color: rgb(0, 126, 243);
   position: absolute;
   bottom: 0;
-  width: 644px;
-  height: 20px;
+  width: 1024px;
+  height: 30px;
+  margin: 0 auto;
+}
+
+div.header{
+  background-color: rgb(0, 126, 243);
+  position: absolute;
+  top: 0;
+  width: 1024px;
+  height: 30px;
   margin: 0 auto;
 }
 
