--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,17 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
+    div.header 
+      Table
+        Tr
+        td(width ="200px")
+          a(href='./aboutme') About me 
+        td(width ="200px")
+          a(href='http://www.microsoft.com') Microsoft
+        td(width ="200px")
+          a(href='./users') Users
+        td(width ="200px")
+          a(href='./') Home
     block content 
     div.footer 
       Table
