--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -22,7 +22,7 @@ block content
           p(style='color: rgb(65, 65, 65); font-family: sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;')
             | Brady holds nearly every major quarterback record, including passing yards, completions, touchdown passes, and games started, in addition to the most Pro Bowl selections. Never having a losing season, he is the NFL leader in career quarterback wins, quarterback regular season wins, quarterback playoff wins, and Super Bowl MVP awards, as well as the only Super Bowl MVP for two different franchises. The only quarterback to win a Super Bowl in three separate decades, Brady has also been noted for the longevity of his success. He is the oldest player to be named Super Bowl MVP and win a Super Bowl as the starting quarterback at age 43, the oldest NFL MVP at age 40, and the oldest quarterback selected to the Pro Bowl at age 44.[8] Brady is the only NFL quarterback named to two all-decade teams (2000s and 2010s)[9] and was unanimously named to the 100th Anniversary All-Time Team in 2019.
           br
-  form(action='./aboutme/feedback', method='GET')
+  form(action='./aboutme/feedback', method='POST')
     p Name: 
       input(type='text', name='name')
     p Email: 
