--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -24,10 +24,10 @@ block content
           br
   form(action='./aboutme/feedback', method='POST')
     p Name: 
-      input(type='text', name='name')
+      input(type='text', name='name' value="Vivek Dalvi")
     p Email: 
-      input(type='text', name='email')
+      input(type='text', name='email' value="vivekdalvi@hotmail.com")
     p comment: 
-      input(type="textarea"  name="comment")
+      input(type="textarea"  name="comment" value="This is awesome")
     p
       input(type='submit', value='Submit')
