feedback writing into file

--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -28,6 +28,6 @@ block content
     p Email: 
       input(type='text', name='email' value="vivekdalvi@hotmail.com")
     p comment: 
-      input(type="textarea"  name="comment" value="This is awesome")
+      input(type="textarea"  name="comment" value="Vivek's node App is great learning tool")
     p
       input(type='submit', value='Submit')
